--- a/GUCera/GUCera.csproj
+++ b/GUCera/GUCera.csproj
@@ -67,10 +67,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AddMobileNumber.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="Registeration.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddMobileNumber.aspx.cs">
+      <DependentUpon>AddMobileNumber.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddMobileNumber.aspx.designer.cs">
+      <DependentUpon>AddMobileNumber.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registeration.aspx.cs">
       <DependentUpon>Registeration.aspx</DependentUpon>
@@ -79,6 +95,7 @@
     <Compile Include="Registeration.aspx.designer.cs">
       <DependentUpon>Registeration.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SqlParamter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
