--- a/GUCera/GUCera.csproj
+++ b/GUCera/GUCera.csproj
@@ -70,8 +70,12 @@
     <Content Include="AddMobileNumber.aspx" />
     <Content Include="AddNewCourse.aspx" />
     <Content Include="DefineAssignments.aspx" />
+    <Content Include="GradeAssignments.aspx" />
+    <Content Include="IssueCertificate.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Registeration.aspx" />
+    <Content Include="ViewAssignments.aspx" />
+    <Content Include="ViewFeedback.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +100,20 @@
     <Compile Include="DefineAssignments.aspx.designer.cs">
       <DependentUpon>DefineAssignments.aspx</DependentUpon>
     </Compile>
+    <Compile Include="GradeAssignments.aspx.cs">
+      <DependentUpon>GradeAssignments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GradeAssignments.aspx.designer.cs">
+      <DependentUpon>GradeAssignments.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IssueCertificate.aspx.cs">
+      <DependentUpon>IssueCertificate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IssueCertificate.aspx.designer.cs">
+      <DependentUpon>IssueCertificate.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -112,6 +130,20 @@
       <DependentUpon>Registeration.aspx</DependentUpon>
     </Compile>
     <Compile Include="SqlParamter.cs" />
+    <Compile Include="ViewAssignments.aspx.cs">
+      <DependentUpon>ViewAssignments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewAssignments.aspx.designer.cs">
+      <DependentUpon>ViewAssignments.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewFeedback.aspx.cs">
+      <DependentUpon>ViewFeedback.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewFeedback.aspx.designer.cs">
+      <DependentUpon>ViewFeedback.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
