--- a/GUCera/GUCera.csproj
+++ b/GUCera/GUCera.csproj
@@ -68,9 +68,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AcceptCourse.aspx" />
+    <Content Include="AddCreditCard.aspx" />
     <Content Include="AddMobileNumber.aspx" />
     <Content Include="AddNewCourse.aspx" />
     <Content Include="AdminHomePage.aspx" />
+    <Content Include="AvailableCourses.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -112,7 +114,9 @@
     <Content Include="ListCourses.aspx" />
     <Content Include="ListNonAcceptedCourses.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Promocodes.aspx" />
     <Content Include="Registeration.aspx" />
+    <Content Include="StudentHomePage.aspx" />
     <Content Include="ViewAssignments.aspx" />
     <Content Include="ViewFeedback.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -234,6 +238,13 @@
     <Compile Include="AcceptCourse.aspx.designer.cs">
       <DependentUpon>AcceptCourse.aspx</DependentUpon>
     </Compile>
+    <Compile Include="AddCreditCard.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>AddCreditCard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddCreditCard.aspx.designer.cs">
+      <DependentUpon>AddCreditCard.aspx</DependentUpon>
+    </Compile>
     <Compile Include="AddMobileNumber.aspx.cs">
       <DependentUpon>AddMobileNumber.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -254,6 +265,13 @@
     </Compile>
     <Compile Include="AdminHomePage.aspx.designer.cs">
       <DependentUpon>AdminHomePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AvailableCourses.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>AvailableCourses.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AvailableCourses.aspx.designer.cs">
+      <DependentUpon>AvailableCourses.aspx</DependentUpon>
     </Compile>
     <Compile Include="CreatePromocode.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
@@ -318,6 +336,13 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Promocodes.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>Promocodes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Promocodes.aspx.designer.cs">
+      <DependentUpon>Promocodes.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registeration.aspx.cs">
       <DependentUpon>Registeration.aspx</DependentUpon>
@@ -325,6 +350,13 @@
     </Compile>
     <Compile Include="Registeration.aspx.designer.cs">
       <DependentUpon>Registeration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="StudentHomePage.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>StudentHomePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="StudentHomePage.aspx.designer.cs">
+      <DependentUpon>StudentHomePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewAssignments.aspx.cs">
       <DependentUpon>ViewAssignments.aspx</DependentUpon>
