--- a/GUCera/GUCera.csproj
+++ b/GUCera/GUCera.csproj
@@ -105,6 +105,7 @@
     <Content Include="Content\bootstrap.rtl.css.map" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\bootstrap.rtl.min.css.map" />
+    <Content Include="Course.aspx" />
     <Content Include="CreatePromocode.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DefineAssignments.aspx" />
@@ -272,6 +273,13 @@
     </Compile>
     <Compile Include="AvailableCourses.aspx.designer.cs">
       <DependentUpon>AvailableCourses.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Course.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>Course.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Course.aspx.designer.cs">
+      <DependentUpon>Course.aspx</DependentUpon>
     </Compile>
     <Compile Include="CreatePromocode.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
