--- a/GUCera/Web.config
+++ b/GUCera/Web.config
@@ -7,7 +7,7 @@
 <configuration>
   <connectionStrings>
     <add name="GUCera"
-      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GUCera;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      connectionString="Server=den1.mssql8.gear.host; Database=gucera; User Id=gucera; Password=Et90768d4D_?;"
       />
   </connectionStrings>
   <system.web>
