--- a/GUCera/GUCera.csproj
+++ b/GUCera/GUCera.csproj
@@ -68,9 +68,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AcceptCourse.aspx" />
+    <Content Include="AddFeedback.aspx" />
     <Content Include="AddMobileNumber.aspx" />
     <Content Include="AddNewCourse.aspx" />
     <Content Include="AdminHomePage.aspx" />
+    <Content Include="Certificates.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -113,7 +115,10 @@
     <Content Include="ListNonAcceptedCourses.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Registeration.aspx" />
+    <Content Include="SubmitAssignment.aspx" />
+    <Content Include="ViewAssignmentGrade.aspx" />
     <Content Include="ViewAssignments.aspx" />
+    <Content Include="ViewAssignmentsContent.aspx" />
     <Content Include="ViewFeedback.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
@@ -234,6 +239,13 @@
     <Compile Include="AcceptCourse.aspx.designer.cs">
       <DependentUpon>AcceptCourse.aspx</DependentUpon>
     </Compile>
+    <Compile Include="AddFeedback.aspx.cs">
+      <DependentUpon>AddFeedback.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddFeedback.aspx.designer.cs">
+      <DependentUpon>AddFeedback.aspx</DependentUpon>
+    </Compile>
     <Compile Include="AddMobileNumber.aspx.cs">
       <DependentUpon>AddMobileNumber.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -254,6 +266,13 @@
     </Compile>
     <Compile Include="AdminHomePage.aspx.designer.cs">
       <DependentUpon>AdminHomePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Certificates.aspx.cs">
+      <DependentUpon>Certificates.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Certificates.aspx.designer.cs">
+      <DependentUpon>Certificates.aspx</DependentUpon>
     </Compile>
     <Compile Include="CreatePromocode.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
@@ -326,12 +345,33 @@
     <Compile Include="Registeration.aspx.designer.cs">
       <DependentUpon>Registeration.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SubmitAssignment.aspx.cs">
+      <DependentUpon>SubmitAssignment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SubmitAssignment.aspx.designer.cs">
+      <DependentUpon>SubmitAssignment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewAssignmentGrade.aspx.cs">
+      <DependentUpon>ViewAssignmentGrade.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewAssignmentGrade.aspx.designer.cs">
+      <DependentUpon>ViewAssignmentGrade.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewAssignments.aspx.cs">
       <DependentUpon>ViewAssignments.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ViewAssignments.aspx.designer.cs">
       <DependentUpon>ViewAssignments.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewAssignmentsContent.aspx.cs">
+      <DependentUpon>ViewAssignmentsContent.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewAssignmentsContent.aspx.designer.cs">
+      <DependentUpon>ViewAssignmentsContent.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewFeedback.aspx.cs">
       <DependentUpon>ViewFeedback.aspx</DependentUpon>
