Added connecttion.close in CourseInformationPage.aspx.cs in the catch statement

--- a/GUCera/Web.config
+++ b/GUCera/Web.config
@@ -7,8 +7,8 @@
 <configuration>
   <connectionStrings>
     <add name="GUCera"
-      connectionString="Server=den1.mssql8.gear.host; Database=gucera; User Id=gucera; Password=Et90768d4D_?;"
-      />
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GUCera;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
